made skill as bold , alignment createdAt fixed ..

--- a/client/stylesheets/custom.css
+++ b/client/stylesheets/custom.css
@@ -171,3 +171,7 @@
 .marginTop25{
 	margin-top: 25px !important;
 }
+
+	.comment{
+		max-width:65%;
+	}
